--- a/less/about.less
+++ b/less/about.less
@@ -11,6 +11,7 @@
     padding-top: 35px;
     @media @mobile{
         width: 80%;
+        padding-top: 10px;
     }
     .about-container{
         width: 100%;
