--- a/less/projects.less
+++ b/less/projects.less
@@ -11,6 +11,7 @@
   border-radius: 5px;
   @media @mobile{
       width: 80%;
+      padding-top: 10px;
   }
   img {
     width: 90%;
